[tool.poetry]
name = "neoconfigen"
authors = ["Omry Yadan", "Rosario Scalise", "PAL"]
description = "A fork of hydra-core's configen with support for annotations."
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^1.1.0dev1"
jinja2 = "^2.11.3"

[tool.poetry.scripts]
configen = 'configen.configen:main'

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | hydra/grammar/gen
    | tools/configen/example/gen
    | .tox
    | .nox
    | website
    | .venv
    | _build
    | dist
  )
)
'''
