[tool.poetry]
name = "neoconfigen"
authors = ["Omry Yadan", "Rosario Scalise", "PAL <info@predictive-analytics-lab.com>"]
description = "A fork of hydra-core's configen with extended type-compatibility."
version = "2.4.2"
repository="https://github.com/predictive-analytics-lab/neoconfigen"
license = "MIT License"
packages = [{ include = "configen" }]
include=["configen/py.typed"]
classifiers=[
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
keywords=["hydra", "python"]
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
hydra-core = "^1.2.0"
jinja2 = "^3.0.3"
markupsafe = "*"
typing-inspect = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^23.1"
mypy = "^1.5.1"
pytest = "^6.2.2"
isort = "^5.7.0"

[tool.poetry.scripts]
configen = 'configen.configen:main'

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = "(hydra/grammar/gen|tools/configen/example/gen)"

[tool.isort]
known_third_party = [
  "black",
  "click",
  "click_option_group",
  "ethicml",
  "hydra",
  "matplotlib",
  "mypy",
  "numpy",
  "omegaconf",
  "pandas",
  "pylint",
  "pytest",
  "scipy",
  "setuptools",
  "sklearn",
  "torch",
  "tqdm",
  "wandb",
]
known_future_library = []
extra_standard_library = ["dataclasses", "__future__"]
line_length = 88
profile = "black"
force_sort_within_sections = "True"
classes = ["MISSING"]


[tool.pyright]
include = ["configen"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"
pythonVersion = "3.9"
reportUnusedImport = "error"
reportDuplicateImport  = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverload = "error"
reportUntypedNamedTuple = "error"
reportConstantRedefinition = "warning"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
strictListInference = true
strictSetInference = true
strictParameterNoneValue = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
